# recurrence-dynamics-study

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.sha256  README.md  VALIDATION_SUMMARY.txt  pyproject.toml
.github/workflows/: reproduction.yml  tests.yml
data/conserved_sector_perturbations/: README.md  mean_hamming_series.csv  trial_results.csv
data/continuous_dynamics/: elastic_ring_orbit.csv  irrational_torus_near_returns.csv
data/fixed_density_scaling/: README.md  condition_summary.csv  mean_damage_series.csv  trial_results.csv
data/hexagonal_rotor_gas/: condition_summary.csv  mean_damage_series.csv  trial_results.csv
data/square_lattice_gas/: README.md  ambiguity_cycles.csv  pair_hamming_distance.csv  size_sweep.csv
docs/: mathematical_framework.md  poincare_recurrence.md  recurrence_dynamics_framework.md  reproducibility.md
recurrence-dynamics-study/: CHANGELOG.md  CITATION.cff  LICENSE.md  MANIFEST.sha256  Makefile  requirements-dev.txt  requirements.txt
recurrence-dynamics-study/data/: README.md
recurrence-dynamics-study/docs/: quantum_recurrence.md
recurrence-dynamics-study/paper/: exact_and_near_recurrence.tex
recurrence-dynamics-study/scripts/: validate.py  verify_ambiguity_certificate.py
recurrence-dynamics-study/tests/: test_elastic_particle_ring.py  test_repository_integrity.py  (+1 more)
scripts/: validate_repository.py
tests/: test_binary_cellular_automaton.py  test_finite_orbits.py  test_hexagonal_rotor_gas.py  test_hpp_predictive_ambiguity.py  test_square_lattice_gas.py
(+17 files in other folders)
