[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recurrence-dynamics"
version = "2.2.0"
description = "Framework for recurrence, predictive observability, and hidden-state ambiguity in deterministic dynamics"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSES/Apache-2.0.txt"]
requires-python = ">=3.13,<3.14"
dependencies = [
  "matplotlib==3.10.8",
  "Pillow==12.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
